--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,27 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_search"
+        android:id="@+id/nav_buy_tickets"
         android:icon="@drawable/ic_icon_search_menu"
-        android:menuCategory="secondary"
         android:title="@string/title_search" />
 
     <item
-        android:id="@+id/navigation_tickets"
+        android:id="@+id/nav_my_tickets"
         android:icon="@drawable/ic_icon_tickets_menu"
-        android:menuCategory="secondary"
         android:title="@string/title_tickets" />
 
     <item
-        android:id="@+id/navigation_contacts"
+        android:id="@+id/nav_contacts"
         android:icon="@drawable/ic_icon_contacts_menu"
-        android:menuCategory="secondary"
         android:title="@string/title_contacts" />
 
     <item
-        android:id="@+id/navigation_user"
+        android:id="@+id/nav_user"
         android:icon="@drawable/ic_icon_user_menu"
-        android:menuCategory="secondary"
         android:title="@string/title_user" />
 
 </menu>
