--- a/app/src/main/res/navigation/nav_contacts.xml
+++ b/app/src/main/res/navigation/nav_contacts.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_main"
+    android:id="@+id/nav_contacts"
     app:startDestination="@id/navigation_contacts">
 
     <fragment
