--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -1,98 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/navigation_search">
+    app:startDestination="@id/nav_buy_tickets">
 
-    <fragment
-        android:id="@+id/navigation_search"
-        android:name="kz.busjol.ui.search.SearchFragment"
-        tools:layout="@layout/fragment_search" >
-        <action
-            android:id="@+id/action_navigation_search_to_cityPickerDialog"
-            app:destination="@id/navigation_city_picker_dialog" />
-        <action
-            android:id="@+id/action_navigation_search_to_nav_buy_tickets"
-            app:destination="@id/navigation_trip_fragment"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"/>
-        <action
-            android:id="@+id/action_navigation_search_to_navigation_quantity_dialog"
-            app:destination="@id/navigation_quantity_dialog" />
-
-    </fragment>
-
-    <fragment
-        android:id="@+id/navigation_tickets"
-        android:name="kz.busjol.ui.tickets.TicketsFragment"
-        tools:layout="@layout/fragment_tickets" />
-
-    <fragment
-        android:id="@+id/navigation_contacts"
-        android:name="kz.busjol.ui.contacts.ContactsFragment"
-        tools:layout="@layout/fragment_contacts" />
-
-    <fragment
-        android:id="@+id/navigation_user"
-        android:name="kz.busjol.ui.user.UserFragment"
-        tools:layout="@layout/fragment_user" />
-
-    <dialog
-        android:id="@+id/navigation_city_picker_dialog"
-        android:name="kz.busjol.ui.search.CityPickerDialog"
-        tools:layout="@layout/dialog_city_selector">
-
-        <argument
-            android:name="cityList"
-            app:argType="kz.busjol.data.City[]"/>
-
-        <argument
-            android:name="fromOrToCity"
-            app:argType="string"/>
-
-    </dialog>
-
-    <fragment
-        android:id="@+id/navigation_trip_fragment"
-        android:name="kz.busjol.ui.trip.TripFragment"
-        tools:layout="@layout/fragment_trip"
-        android:label="TripFragment" >
-
-        <argument
-            android:name="cities"
-            app:argType="string[]" />
-        <argument
-            android:name="date"
-            app:argType="string"/>
-        <action
-            android:id="@+id/action_navigation_trip_fragment_to_navigation_bus_plan"
-            app:destination="@id/navigation_bus_plan"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"/>
-
-    </fragment>
-
-    <dialog
-        android:id="@+id/navigation_quantity_dialog"
-        android:name="kz.busjol.ui.search.PassengerQuantityDialog"
-        tools:layout="@layout/dialog_passenger_quantity"
-        android:label="PassengerQuantityDialog" />
-
-    <fragment
-        android:id="@+id/navigation_bus_plan"
-        android:name="kz.busjol.ui.bus_plan.BusPlanFragment"
-        tools:layout="@layout/fragment_bus_plan"
-        android:label="BusPlanFragment">
-
-        <argument
-            android:name="trip_type"
-            app:argType="string"/>
-
-    </fragment>
+    <include app:graph="@navigation/nav_buy_tickets"/>
+    <include app:graph="@navigation/nav_my_tickets"/>
+    <include app:graph="@navigation/nav_contacts"/>
+    <include app:graph="@navigation/nav_user"/>
 
 </navigation>
